# nunet-py

./: .bumpversion.cfg  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  sample.env
example/: simple_cpu.py
src/nunet/: __init__.py  base.py  models.py
